--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         It is a single-threaded programming language. This means it can do one thing at a time.It is
                         also an interpreted programming language,we do not have to compile the JavaScript code before
                         sending it to the browser. Browser has a built-in interpreter that reads the JavaScript code.
-                        After the code browser show it to the user.
+                        After compiling the code browser show it to the user.
                     </div>
                 </div>
             </div>
